# turbojpeg-java

./: .gitattributes  BUILDING.md  CMakeLists.txt  ChangeLog.md  LICENSE.md  README.md  TJBench.java  TJComp.java  TJDecomp.java  TJTran.java  TJUnitTest.java  turbojpeg-jni-mapfile  turbojpeg-jni.c
.github/workflows/: build.yml
cmakescripts/: FindTurboJPEG.cmake  tjbenchtest.cmake  tjexampletest.cmake
md5/: CMakeLists.txt
org/libjpegturbo/turbojpeg/: TJLoader.java
org/scijava/util/: ClassUtils.java  FileUtils.java  PlatformUtils.java
release/: maketarball.in  makezip.in
test/: tjbenchtest.in  tjcomptest.in  tjdecomptest.in  tjtrantest.in
testimages/: fireball_lily8.pgm  fireball_lily8.ppm
